#blog_subscription-2 .widget-title

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ z-index: 600;
 position: relative;
 }
 
-#footer-widget-3 .widget-title,
+#blog_subscription-2 .widget-title,
   #footer-widget-1 .widget-title {
     margin-top: 0;
     color: white;
