--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ position: relative;
   position: relative;
   }
 
+  #subscribe-text,
   #footer-widget-1 .widget {
     margin: 0 auto;
     max-width: 780px;
