--- a/style.css
+++ b/style.css
@@ -277,6 +277,37 @@ margin:0 auto;
 }
 
 
+    #subscribe-email input {
+      width: 45%;
+      height: 60px;
+      padding: 10px 8px;
+      font-size: 15px;
+      float: left;
+      border: 0 none;
+      border: 4px solid rgb(255, 255, 255);
+      border-radius: 45px;
+      border-radius: 25px 0px 0px 25px;
+      -moz-border-radius: 25px 0px 0px 25px;
+      -webkit-border-radius: 25px 0px 0px 25px;
+     border-style: solid;
+      background-color: rgb(255, 255, 255);
+  }
+
+  #subscribe-submit input {
+    background: #28267a;
+    width: 20%;
+    padding: 0;
+    border: 4px solid rgb(255, 255, 255);
+    height: 60px;
+    border-radius: 0;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-radius: 0px 25px 25px 0px;
+    -moz-border-radius: 0px 25px 25px 0px;
+    -webkit-border-radius: 0px 25px 25px 0px;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
 
 /***********************
    Social Media Widgets
