--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ margin:0 auto;
 
 
     #subscribe-email input {
-      width: 45%;
+      width: 45%!important;
       height: 60px;
       padding: 10px 8px;
       font-size: 15px;
