--- a/style.css
+++ b/style.css
@@ -284,24 +284,20 @@ margin:0 auto;
       font-size: 15px;
       float: left;
       border: 0 none;
-      border: 4px solid rgb(255, 255, 255);
-      border-radius: 45px;
       border-radius: 25px 0px 0px 25px;
       -moz-border-radius: 25px 0px 0px 25px;
       -webkit-border-radius: 25px 0px 0px 25px;
      border-style: solid;
-      background-color: rgb(255, 255, 255);
+      background-color: rgba(255, 255, 255, 1);
   }
 
   #subscribe-submit input {
     background: #28267a;
     width: 20%;
     padding: 0;
-    border: 4px solid rgb(255, 255, 255);
+    border: 4px solid rgba(255, 255, 255, 1);
     height: 60px;
     border-radius: 0;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
     border-radius: 0px 25px 25px 0px;
     -moz-border-radius: 0px 25px 25px 0px;
     -webkit-border-radius: 0px 25px 25px 0px;
