--- a/style.css
+++ b/style.css
@@ -291,6 +291,13 @@ margin:0 auto;
       background-color: rgba(255, 255, 255, 1);
   }
 
+  #subscribe-email input[type="email"]:focus{
+    border:2px solid #1d1c65!important;
+    border-radius: 25px 0px 0px 25px!important;
+  }
+
+ 
+
   #subscribe-submit input {
     background: #28267a;
     width: 20%;
@@ -460,7 +467,9 @@ textarea {
   textarea:focus {
     outline: 2px solid rgba(29, 33, 95, 0.6);
     -webkit-box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15);
-            box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15); }
+            box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15); 
+          
+          }
 
 input[type="text"],
 input[type="email"],
