--- a/style.css
+++ b/style.css
@@ -293,7 +293,9 @@ margin:0 auto;
 
   #subscribe-email input[type="email"]:focus{
     border-radius: 25px 0px 0px 25px!important;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+    -webkit-box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.17);
+    -moz-box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.17);
+    box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.17);
   }
 
  
