--- a/style.css
+++ b/style.css
@@ -218,6 +218,14 @@ a.btn.btn-info {
 /***********************
      Sponsors Widgets 
 ***********************/
+
+#footer-widget-2{
+  max-width:1200px;
+  margin-left:auto;
+  margin-right:auto;
+  padding: 145px 0 425px 0;
+}
+
 #wcb_sponsors-2 h2.widget-title{
   text-align:center;
 }
@@ -243,6 +251,7 @@ a.btn.btn-info {
 /***********************
    Subscribe Widgets
 ***********************/
+
 #footer-widget-3{
   background-color: rgba(194, 181, 155, 1);
   padding:120px 20px;
@@ -262,12 +271,6 @@ a.btn.btn-info {
   z-index: 400;
 }
 
-#footer-widget-2{
-  max-width:1200px;
-  margin-left:auto;
-  margin-right:auto;
-  padding: 145px 0 425px 0;
-}
 
 #blog_subscription-2{
   position:relative;
@@ -276,6 +279,9 @@ max-width:780px;
 margin:0 auto;
 }
 
+#subscribe-email {
+  margin-top: 45px;
+}
 
     #subscribe-email input {
       width: 45%!important;
