--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ position: relative;
     font-size: 60px;
     font-size: 6rem;
     line-height: 1.2;
-    text-align: left; 
+    text-align: left;
   position: relative;
   }
 
@@ -168,7 +168,7 @@ position: relative;
   #footer-widget-1 .widget {
     margin: 0 auto;
     max-width: 780px;
-    color: #28267a; 
+    color: #28267a;
   position:relative;
   z-index: 600;
   font-size:38px;
@@ -216,7 +216,7 @@ a.btn.btn-info {
   border: 4px solid #fff;
 }
 /***********************
-     Sponsors Widgets 
+     Sponsors Widgets
 ***********************/
 
 #footer-widget-2{
@@ -304,7 +304,7 @@ margin:0 auto;
     box-shadow: inset 0px 0px 5px rgba(40, 38, 122, 0.57);
   }
 
- 
+
 
   #subscribe-submit input {
     background: #28267a;
@@ -472,11 +472,11 @@ textarea {
   input[type="search"]:focus,
   select:focus,
   textarea:focus {
-    
+
     outline: 2px solid rgba(29, 33, 95, 0.6);
     -webkit-box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15);
-            box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15); 
-          
+            box-shadow: inset 0 2px 3px 0 rgba(0, 0, 0, 0.15);
+
           }
 
 input[type="text"],
@@ -617,7 +617,7 @@ a.cta-button {
     font-weight: 400; }
   .page-navigation-container li:hover,
   .page-navigation-container li.focus {
-    background: #2A2878; }
+    background: #302579; }
     .page-navigation-container li:hover a,
     .page-navigation-container li.focus a {
       color: #fff;
@@ -1298,7 +1298,7 @@ margin-top:40px;
   left: -999em;
   z-index: 99999;
   border-radius: 0px 0px 5px 5px;
-  background-color: #2A2878;
+  background-color: #302579;
   color:#fff;
 }
 .page-navigation-container ul ul ul {
@@ -1331,7 +1331,7 @@ margin-top:40px;
 
 .page-navigation-container ul {
   display: block;
-  background-color: #2A2878;
+  background-color: #302579;
 }
 .page-navigation-container a{
   color:#fff;
