--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
  .site-branding{
   text-align:center;
   text-shadow:0px 2px 6px #202020;
+  z-index: 800;
+position: relative;
 }
 p.site-title a,
 h1.site-title a,
@@ -68,6 +70,18 @@ h1.site-title a:hover{
 p.site-title,
 h1.site-title{
  margin:0;
+}
+
+.custom-header::after {
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(40, 38, 122, .2);
+  z-index: 300;
 }
 
 /***********************
@@ -707,6 +721,8 @@ height:960px;
     margin: 0 auto;
     padding: 100px 0px 0px 0px;
    text-align:center;
+   position: relative;
+z-index: 800;
   }
 
 /* Try a smaller logo on interior pages */
