--- a/style.css
+++ b/style.css
@@ -627,7 +627,7 @@ a.cta-button {
     color: #2d2d77; }
     .page-navigation-container li:hover a,
     .page-navigation-container li.focus a {
-      color: #fff;
+      color: #2d2d77;
       text-decoration: none; }
   .page-navigation-container ul ul {
     top: 78px;
@@ -1301,7 +1301,7 @@ margin-top:40px;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   float: left;
   position: absolute;
-  top: 3.7em;
+  top: 3.65em;
   left: -999em;
   z-index: 99999;
   border-radius: 0px 0px 5px 5px;
