submenu hover color

--- a/style.css
+++ b/style.css
@@ -639,7 +639,7 @@ a.cta-button {
       border-top: 1px solid grey; }
     .page-navigation-container ul ul li:hover a,
     .page-navigation-container ul ul li.focus a {
-      color: #fff;}
+      color: #1d215f;}
   .page-navigation-container .callout {
     position: absolute;
     right: 0;
