--- a/style.css
+++ b/style.css
@@ -660,10 +660,10 @@ a.cta-button {
 .js .menu-toggle, .js .dropdown-toggle {
     display: none;
 }
-.page-navigation-container li.menu-item-has-children:after{
+.page-navigation-container li.menu-item-has-children a:after{
   content: "\f140";
   font-family: dashicons;
-
+  position: absolute;
 }
 
 @media screen and (max-width: 37.5em) {
