--- a/style.css
+++ b/style.css
@@ -156,6 +156,34 @@ text-align: center;
  color: rgba(194, 181, 155, 1);
 }
 
+blockquote{
+  font-size: 2.8rem;
+  margin: 50px auto;
+  font-style: italic;
+  color: #555555;
+  padding: 19px 30px 19px 75px;
+  line-height: 1.6;
+  position: relative;
+}
+blockquote::before{
+  font-family: 'Open Sans', sans-serif;
+  content: "\201C";
+  color: rgba(194, 181, 155, 1);
+  font-size:4em;
+  position: absolute;
+  left: 10px;
+  top:-10px;
+}
+
+blockquote::after{
+  font-family: 'Open Sans', sans-serif;
+  content: "\201D";
+  color: rgba(194, 181, 155, 1);
+  font-size:4em;
+  position: absolute;
+  right: 10px;
+  bottom:-50px;
+}
 /***********************
      Buy Tickets Widgets
 ***********************/
@@ -1044,9 +1072,7 @@ body:not(.home) .site-main {
     text-decoration: underline;
     color: #28267a;
     }
-    body.home .entry-content a:hover, body.home .entry-content a:active, body.home .entry-content a:focus {
-      -webkit-box-shadow: 0 2px 7px 2px rgba(79, 88, 0, 0.2), 0 1px 1px 0 rgba(79, 88, 0, 0.1);
-              box-shadow: 0 2px 7px 2px rgba(79, 88, 0, 0.2), 0 1px 1px 0 rgba(79, 88, 0, 0.1); }
+
     body.home .entry-content a:focus {
       outline: 2px solid #1d215f; }
     body.home .entry-content a:hover, body.home .entry-content a:active, body.home .entry-content a:focus {
