--- a/style.css
+++ b/style.css
@@ -157,16 +157,17 @@ text-align: center;
 }
 
 blockquote{
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   margin: 50px auto;
   font-style: italic;
   color: #555555;
   padding: 19px 30px 19px 75px;
   line-height: 1.6;
   position: relative;
+  font-weight: 300;
 }
 blockquote::before{
-  font-family: 'Open Sans', sans-serif;
+  font-family: arial;
   content: "\201C";
   color: rgba(194, 181, 155, 1);
   font-size:4em;
@@ -176,7 +177,7 @@ blockquote::before{
 }
 
 blockquote::after{
-  font-family: 'Open Sans', sans-serif;
+  font-family: arial;
   content: "\201D";
   color: rgba(194, 181, 155, 1);
   font-size:4em;
