--- a/style.css
+++ b/style.css
@@ -20,9 +20,8 @@
 
   .entry-content img.size-full
   {
-    max-width: 100%;
- height:auto;
-  display: block;
+    
+  display: none!important;
   }
 
 }
