--- a/style.css
+++ b/style.css
@@ -635,7 +635,7 @@ a.cta-button {
     .page-navigation-container ul ul a {
       padding: 10px 15px;
       color: #000;
-      width: 17em;
+      width: 200px;
       border-top: 1px solid grey; }
     .page-navigation-container ul ul li:hover a,
     .page-navigation-container ul ul li.focus a {
@@ -1338,9 +1338,7 @@ margin-top:40px;
 
 /* Small menu. */
 @media screen and (max-width: 860px) {
-
-.menu-toggle,
-.dropdown-toggle {
+  .js .menu-toggle, .js .dropdown-toggle {
   display: block;
 }
 
@@ -1349,7 +1347,8 @@ margin-top:40px;
   color: #2d2d77;
 }
 .page-navigation-container a{
-  color:#fff;
+  color:#000;
+  padding: 9px 14px;
 }
 .page-navigation-container.toggled-on .menu-primary-nav-container{
 width: 100%;
