--- a/style.css
+++ b/style.css
@@ -1379,7 +1379,7 @@ margin-top:40px;
 
 /* Small menu. */
 @media screen and (max-width: 860px) {
-  .js .menu-toggle, .js .dropdown-toggle {
+.site  .js .menu-toggle, .site .js .dropdown-toggle {
   display: block;
 }
 
