--- a/style.css
+++ b/style.css
@@ -16,17 +16,23 @@
 #header-widget-1 h2.widget-title{
   display: none;
 }
-@media screen and (max-width: 1024px){
-
-  .entry-content img.size-full
-  {
-    max-width:100%;
-    height:auto;
-  display: block;
-  margin:0!important;
+@media screen and (max-width: 820px){
+  .entry-content p{
+      margin-left:30px;
+      margin-right:30px;
+      
+    }
   }
-
-}
+  
+  @media screen and (max-width: 1200px) {
+    
+    .entry-content img.size-full {
+      max-width: 100%!important;
+      height: auto;
+      display: block;
+      margin: 0 !important;
+    }
+  }
 /**************************
       Navigation Menu
 ***************************/
@@ -145,9 +151,9 @@ text-align: center;
 }
 
 .entry-content img.size-full {
-  width: 140%;
-  margin-left: -20%;
-  margin-right: -20%;
+  width: 120%;
+  margin-left: -10%;
+  margin-right: -10%;
   max-width: 100vw;
   margin-bottom:20px;
 }
