.wcb_widget_sponsors .sponsor-logo

--- a/style.css
+++ b/style.css
@@ -347,6 +347,10 @@ width: auto!important;
 padding: 15px!important;
 }
 
+.wcb_widget_sponsors .sponsor-logo{
+  display: inline!important;
+}
+
 .sponsor-level-title{
   text-align:center;
 }
