--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@
 		bottom: 20px!important;
 		height: 80px!important;
   }
-  
+
   #custom_html-17{
 		float: left;
 		display: block;
 	}
 }
-  
+
 @media screen and (max-width: 1200px) {
 	.entry-content img.size-full {
 		max-width: 100% !important;
@@ -64,7 +64,7 @@
       font-weight: 700;
     }
   }
-    
+
 /**************************
       Navigation Menu
 ***************************/
@@ -256,7 +256,7 @@ position: relative;
   max-width: 420px;
   top:20px;
   }
- 
+
 #blog_subscription-2 .widget-title,
   #footer-widget-1 .widget-title {
     margin-top: 0;
@@ -358,6 +358,18 @@ padding: 15px!important;
 #media_image-2 img{
   display: block;
   margin:0 auto;
+}
+.wcb_widget_sponsors .sponsor-logo img {
+  max-width: 33%;
+  height: auto;
+  max-height: 150px;
+  width: auto;
+  display: inline-block;
+  float: left;
+}
+.sponsor-level .gold-sponsors{
+  margin: 0 auto;
+    width: 720px;
 }
 
 /***********************
