--- a/style.css
+++ b/style.css
@@ -359,10 +359,10 @@ padding: 15px!important;
   display: block;
   margin:0 auto;
 }
-#footer-widget-2 .wcb_widget_sponsors .sponsor-logo a {
-  width: 33%;
-  display:inline-block;
-
+#footer-widget-2 .wcb_widget_sponsors .sponsor-logo {
+     padding-bottom: 10px;
+     width: 32%;
+     display: inline-block;
 }
 
 #footer-widget-2 .wcb_widget_sponsors .sponsor-logo img {
