fixing distance title desktop

--- a/style.css
+++ b/style.css
@@ -352,7 +352,10 @@ padding: 15px!important;
   clear: both;
   width: 100%;
   padding: 28px 0px 0px 0px;
-  font-weight:500;
+  font-weight: 600;
+  margin-top:0px;
+  margin-bottom: 10px;
+
 }
 
 
