--- a/style.css
+++ b/style.css
@@ -355,9 +355,27 @@ padding: 15px!important;
   font-weight: 600;
   margin-top:0px;
   margin-bottom: 10px;
-
 }
-
+.sponsor-level-title::before{
+  content: " ";
+  display: block;
+  position: absolute;
+  height: 5px;
+  background: black;
+  width: 40px;
+  left: 100%;
+  top: calc(50% - 2px);
+}
+.sponsor-level-title::after{
+  content: " ";
+  display: block;
+  position: absolute;
+  height: 5px;
+  background: black;
+  width: 40px;
+  left: 100%;
+  top: calc(50% - 2px);
+}
 
 #media_image-2 img{
   display: block;
