--- a/style.css
+++ b/style.css
@@ -356,25 +356,19 @@ padding: 15px!important;
   margin-top:0px;
   margin-bottom: 10px;
 }
-.sponsor-level-title::before{
-  content: " ";
-  display: block;
-  position: absolute;
-  height: 5px;
-  background: black;
-  width: 40px;
-  left: 100%;
-  top: calc(50% - 2px);
+.sponsor-level-title:before{
+  content:'';
+  display:inline-block;
+  width:100%; height:100%;
+  margin-right:-100%;
+  border-bottom:1px solid #000;
 }
-.sponsor-level-title::after{
-  content: " ";
-  display: block;
-  position: absolute;
-  height: 5px;
-  background: black;
-  width: 40px;
-  left: 100%;
-  top: calc(50% - 2px);
+.sponsor-level-title:after{
+  content:'';
+  display:inline-block;
+  width:100%; height:100%;
+  margin-right:-100%;
+  border-bottom:1px solid #000;
 }
 
 #media_image-2 img{
