--- a/style.css
+++ b/style.css
@@ -347,6 +347,10 @@ width: auto!important;
 padding: 15px!important;
 }
 
+#wcb_sponsors-2 .widget-title{
+  font-weight: 700;
+}
+
 .sponsor-level-title{
   text-align:center;
   clear: both;
@@ -396,6 +400,20 @@ padding: 15px!important;
 #wcb_sponsors-2.widget.wcb_widget_sponsors{
   margin: 0 auto;
     width: 720px;
+}
+
+@media screen and (max-width:740px ) {
+
+  #wcb_sponsors-2.widget.wcb_widget_sponsors{
+    margin: 0 auto;
+      width: 100%;
+  }
+}
+@media screen and (max-width:600px ) {
+  #footer-widget-2 .wcb_widget_sponsors .sponsor-logo {
+    width:50%;
+    float:none;
+  }
 }
 
 /***********************
