--- a/style.css
+++ b/style.css
@@ -1527,7 +1527,7 @@ height: auto;
 }
 .page-navigation-container.toggled-on .menu-primary-nav-container  li{
   float:none;
-  text-align: left;
+  text-align: center;
 }
 .menu-toggle,
 .dropdown-toggle {
