--- a/style.css
+++ b/style.css
@@ -1509,6 +1509,7 @@ margin-top:40px;
   border-radius: 0 0 5px 5px;
   text-align: center;
   display: inline-block;
+  width: 100%;
 }
 .page-navigation-container ul ul a{
   border-top: 0px solid grey;
