change the background-color sponsor level title

--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ padding: 15px!important;
   content: '';
   display: inline-block;
   width: 36%;
-  border-bottom: 2px solid #ccc;
+  border-bottom: 5px solid #c2b59b;
   top: -5px;
   position: relative;
 
