--- a/style.css
+++ b/style.css
@@ -359,6 +359,8 @@ padding: 15px!important;
   font-weight: 700;
   margin-top:0px;
   margin-bottom: 10px;
+  font-size:30px;
+  font-size:3rem;
 }
 
 .sponsor-level-title:after, .sponsor-level-title:before{
