fluid typography widgets

--- a/style.css
+++ b/style.css
@@ -65,6 +65,30 @@
     }
   }
 
+  @media (min-width: 0px) {
+    #footer-widget-1 h2.widget-title {
+      font-size: calc(1.9375rem + ((1vw - 0px) * 3.625));
+    }
+  }
+  @media (min-width: 800px) {
+    #footer-widget-1 h2.widget-title {
+      font-size: 60px;
+      font-size:6rem;
+    }
+  }
+  
+  @media (min-width: 0px) {
+    #blog_subscription-2 h2.widget-title {
+      font-size: calc(1.9375rem + ((1vw - 0px) * 3.625));
+    }
+  }
+  @media (min-width: 800px) {
+    #blog_subscription-2 h2.widget-title {
+      font-size: 60px;
+      font-size:6rem;
+    }
+  }
+  
 /**************************
       Navigation Menu
 ***************************/
@@ -251,6 +275,8 @@ position: relative;
   max-width:800px;
   float:left;
   margin-left:30px;
+  font-size:38px;
+  font-size:3.8rem;
 }
 #custom_html-17{
   max-width: 420px;
@@ -261,8 +287,6 @@ position: relative;
   #footer-widget-1 .widget-title {
     margin-top: 0;
     color: white;
-    font-size: 60px;
-    font-size: 6rem;
     line-height: 1.2;
     text-align: left;
   position: relative;
