--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@
 	background-image: url('https://2018.thessaloniki.wordcamp.org/files/2018/07/wcthess_brand_left.png');
 	display: block;
   height: 3869px;
-  max-height: 100%;
 	width: 588px;
 	z-index: -1;
 	display: block;
@@ -49,7 +48,6 @@
 	background-image: url('https://2018.thessaloniki.wordcamp.org/files/2018/07/wcthess_brand_right.png');
 		top:84.2%;
   height: 3998px;
-  max-height: 100%;
 	width: 530px;
 	right: 0;
 	z-index: -1;
@@ -382,6 +380,10 @@ position: relative;
 }
 #custom_html-17{
   top:50px;
+  }
+
+  #footer-widget-1 .widget-title{
+    margin-left:30px;
   }
 
 #blog_subscription-2 .widget-title,
