--- a/style.css
+++ b/style.css
@@ -443,7 +443,19 @@ a.btn.btn-info {
   vertical-align: middle;
   letter-spacing: 1px;
   border: 4px solid #fff;
+  -moz-transition: all .3s ease;
+-o-transition: all .3s ease;
+-webkit-transition: all .3s ease;
+transition: all .3s ease;
+box-shadow: 0 2px 16px rgba(0,0,0,0.36);
 }
+a.btn.btn-info:hover{
+	background-color:#fff;
+	border:4px solid #28267a;
+		text-decoration:none;
+	
+}
+
 /***********************
      Sponsors Widgets
 ***********************/
