--- a/style.css
+++ b/style.css
@@ -608,17 +608,21 @@ margin:0 auto;
 }
 
     #subscribe-email input {
-      width: 45%!important;
+      width: 70% !important;
       height: 60px;
       padding: 10px 8px;
       font-size: 15px;
+      font-size:1.5rem;
       float: left;
       border: 0 none;
-      border-radius: 25px 0px 0px 25px;
-      -moz-border-radius: 25px 0px 0px 25px;
-      -webkit-border-radius: 25px 0px 0px 25px;
+      border-radius: 25px 25px 25px 25px;
+      -moz-border-radius: 25px 25px 25px 25px;
+      -webkit-border-radius: 25px 25px 25px 25px;
      border-style: solid;
       background-color: rgba(255, 255, 255, 1);
+      box-shadow: 0 2px 16px rgba(0,0,0,0.36);
+      -webkit-box-shadow: 0 2px 16px rgba(0,0,0,0.36);
+      -moz-box-shadow:  0 2px 16px rgba(0,0,0,0.36);
   }
 
   #subscribe-email input[type="email"]:focus{
@@ -631,9 +635,12 @@ margin:0 auto;
 
 
   #subscribe-submit input {
+    position: absolute;
     background: #28267a;
     width: 20%;
     padding: 0;
+    right:0;
+    left:50%;
     border: 4px solid rgba(255, 255, 255, 1);
     height: 60px;
     border-radius: 0;
