--- a/style.css
+++ b/style.css
@@ -649,7 +649,17 @@ margin:0 auto;
     -webkit-border-radius: 0px 25px 25px 0px;
     cursor: pointer;
     text-transform: uppercase;
+    -moz-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
   }
+  #subscribe-submit input:hover{
+    background-color: rgba(255,255,255,1);
+      color: #1d1c65;
+      border: 4px solid #1d1c65;
+  }
+  
 
 /***********************
    Social Media Widgets
