--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ a.btn.btn-info:hover{
 	background-color:#fff;
 	border:4px solid #28267a;
 		text-decoration:none;
-	
+
 }
 
 /***********************
@@ -659,7 +659,7 @@ margin:0 auto;
       color: #1d1c65;
       border: 4px solid #1d1c65;
   }
-  
+
 
 /***********************
    Social Media Widgets
@@ -931,7 +931,7 @@ a.cta-button {
 }
   .page-navigation-container .menu-primary-nav-container {
     display: inline-block;
-    /*height: 65px; */
+    height: 64px;
     position: relative; }
   .page-navigation-container a {
     padding: 26px 15px;
