--- a/style.css
+++ b/style.css
@@ -988,9 +988,11 @@ a.cta-button {
 }
 
 .page-navigation-container li.menu-item-has-children > a:after{
-  content: "\f140";
-  font-family: dashicons;
-  vertical-align: middle;
+content: "\f0d7";
+font-family: 'fontawesome';
+vertical-align: middle;
+font-size: 2.2rem;
+margin-left: 5px;
 }
 
 @media screen and (max-width: 37.5em) {
