--- a/style.css
+++ b/style.css
@@ -578,7 +578,7 @@ padding: 15px!important;
 
 #footer-widget-3{
   background-color: rgba(194, 181, 155, 1);
-  padding:120px 20px;
+  padding:100px 0 210px;
   position:relative;
 }
 
