--- a/style.css
+++ b/style.css
@@ -266,6 +266,8 @@ text-align: center;
 
 .textwidget.custom-html-widget a:hover img {
   box-shadow: 0 0 25px .75px rgba(0,0,0,0.16);
+  -webkit-box-shadow: 0 0 25px .75px rgba(0,0,0,0.16);
+  -moz-box-shadow:  0 0 25px .75px rgba(0,0,0,0.16);
   -moz-transform: scale(1.05);
   -ms-transform: scale(1.05);
   -webkit-transform: scale(1.05);
@@ -280,6 +282,8 @@ text-align: center;
   flex-wrap: nowrap;
   background-color: #fff;
   box-shadow: 0 0 25px .75px rgba(0,0,0,0.16);
+    -webkit-box-shadow: 0 0 25px .75px rgba(0,0,0,0.16);
+  -moz-box-shadow:  0 0 25px .75px rgba(0,0,0,0.16);
   border-radius: 20px;
   height:auto;
   position: relative;
@@ -466,9 +470,12 @@ a.btn.btn-info {
 -webkit-transition: all .3s ease;
 transition: all .3s ease;
 box-shadow: 0 2px 16px rgba(0,0,0,0.36);
+-webkit-box-shadow: 0 2px 16px rgba(0,0,0,0.36);
+-moz-box-shadow:  0 2px 16px rgba(0,0,0,0.36);
 }
 a.btn.btn-info:hover{
-	background-color:#fff;
+  background-color:#fff;
+  color:#28267a;
 	border:4px solid #28267a;
 		text-decoration:none;
 
@@ -855,7 +862,7 @@ a.cta-button {
   text-align: center;
   text-decoration: none;
   color:  rgb(255, 255, 255);
-  background: rgb(40, 38, 122);
+  background-color: rgba(40, 38, 122, 1);
   border-width: 4px;
   border-color: rgb(194, 181, 155);
   font-size: 18px;
@@ -954,10 +961,10 @@ a.cta-button {
       text-decoration: none; }
   .page-navigation-container ul ul {
     top: 78px;
-    background: #2d2d77;}
+    background-color: rgba(40, 38, 122, 1);}
     .page-navigation-container ul ul a {
       padding: 10px 15px;
-      background-color: #2d2d7;
+      background-color: rgba(40, 38, 122, 1);
       color: #fff;
       width: 200px;
       border-top: 1px solid grey; }
@@ -1608,6 +1615,8 @@ margin-top:40px;
 }
 .page-navigation-container ul ul {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow:  0 3px 3px rgba(0, 0, 0, 0.2);
   float: left;
   position: absolute;
   top: 3.65em;
@@ -1664,7 +1673,9 @@ margin-top:40px;
   text-align: center;
   display: inline-block;
   width: 100%;
-  box-shadow: 0 3px 3px rgba(0,0,0,0.0);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow:  0 3px 3px rgba(0, 0, 0, 0.2);
 }
 .page-navigation-container ul ul a{
   border-top: 0px solid grey;
