.entry-content img.size-full

--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ margin-right:auto;
   text-align: center;
   margin:45px 0 35px 0;
 }
-
+.entry-content img.size-large, 
 .entry-content img.size-full {
   width: 120%;
   margin-left: -10%;
