--- a/style.css
+++ b/style.css
@@ -1367,14 +1367,29 @@ body:not(.home) .site-main {
     font-weight: 800;
     text-align: center; }
  .entry-content a {
-    text-decoration: underline;
-    color: #28267a;
+  color: #28267a;
+  background-size: 100% 30%;
+ background-repeat: no-repeat;
+ background-image: -webkit-linear-gradient(bottom, #28267a 50%, rgba(0, 0, 0, 0) 50.1%);
+ background-image: -moz-linear-gradient(bottom, #28267a 50%, rgba(0, 0, 0, 0) 50.1%);
+ background-image: linear-gradient(to top, #28267a 50%, rgba(0, 0, 0, 0) 50.1%);
+ background-position: left 0 bottom 0;
+ -webkit-transition: background 160ms ease;
+ -moz-transition: background 160ms ease;
+ transition: background 160ms ease;
+ text-decoration:none;
     }
 
     body.home .entry-content a:focus {
-      outline: 2px solid #1d215f; }
-    body.home .entry-content a:hover, body.home .entry-content a:active, body.home .entry-content a:focus {
-      color: #1d215f; }
+      background-size: 100% 80%;
+      background-position: left 0 bottom 0; }
+    body.home .entry-content a:hover {
+      color:#fff;
+	  background-size: 100% 200%;
+  background-position: left 0 bottom 0;
+	 background-image: -webkit-linear-gradient(bottom, #28267a 50%, rgba(0, 0, 0, 0) 50.1%);
+  background-image: -moz-linear-gradient(bottom, #28267a 50%, rgba(0, 0, 0, 0) 50.1%);
+  background-image: linear-gradient(to top, #28267a 50%, rgba(0, 0, 0, 0) 50.1%); }
 
 body.error404 .page-content {
   display: grid;
