--- a/style.css
+++ b/style.css
@@ -761,6 +761,7 @@ img {
 a, a:visited {
   color: #1d1c65;
   text-decoration: none; }
+
   a:hover, a:active, a:focus, a:visited:hover, a:visited:active, a:visited:focus {
     color: #28267a;
     text-decoration: underline; }
@@ -1384,12 +1385,12 @@ body:not(.home) .site-main {
       background-size: 100% 80%;
       background-position: left 0 bottom 0; }
     body.home .entry-content a:hover {
-      color:#fff;
-	  background-size: 100% 200%;
-  background-position: left 0 bottom 0;
-	 background-image: -webkit-linear-gradient(bottom, #28267a 50%, rgba(0, 0, 0, 0) 50.1%);
-  background-image: -moz-linear-gradient(bottom, #28267a 50%, rgba(0, 0, 0, 0) 50.1%);
-  background-image: linear-gradient(to top, #28267a 50%, rgba(0, 0, 0, 0) 50.1%); }
+      color:#fff!important;
+	  background-size: 100% 200%!important;
+  background-position: left 0 bottom 0!important;
+	 background-image: -webkit-linear-gradient(bottom, #28267a 50%, rgba(0, 0, 0, 0) 50.1%)!important;
+  background-image: -moz-linear-gradient(bottom, #28267a 50%, rgba(0, 0, 0, 0) 50.1%)!important;
+  background-image: linear-gradient(to top, #28267a 50%, rgba(0, 0, 0, 0) 50.1%)!important;}
 
 body.error404 .page-content {
   display: grid;
@@ -1628,8 +1629,6 @@ margin-top:40px;
   .site-info a {
     color: #1d215f;
     text-decoration: underline; }
-    .site-info a:hover, .site-info a:active, .site-info a:focus {
-      color: #a00a74; }
   .site-info .site-info-generator:after {
     display: block;
     content: '';
