--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@
 }
 
 @media screen and (max-width: 1200px) {
+  .entry-content img.size-large,
 	.entry-content img.size-full {
 		max-width: 100% !important;
 		height: auto;
