--- a/style.css
+++ b/style.css
@@ -626,6 +626,7 @@ padding: 25px 25px 5px 55px!important;
   z-index: 600;
 max-width:800px;
 margin:0 auto;
+transform: perspective(1px) translateX(25%);
 }
 
 #subscribe-email {
@@ -633,7 +634,7 @@ margin:0 auto;
 }
 
     #subscribe-email input {
-      width: 70% !important;
+      width: 50% !important;
       height: 60px;
       padding: 10px 8px;
       font-size: 15px;
@@ -663,7 +664,7 @@ margin:0 auto;
     width: 20%;
     padding: 0;
     right:0;
-    left:50%;
+    left:30%;
     border: 4px solid rgba(255, 255, 255, 1);
     height: 60px;
     border-radius: 0;
