--- a/style.css
+++ b/style.css
@@ -1433,7 +1433,7 @@ body.error404 .search-form {
   margin-bottom: 5px; }
   .contact-form .grunion-field-label span {
     margin-left: 10px;
-    color: #a00a74; }
+    color: #c2b59b; }
 
 .wcorg-organizers .wcorg-organizer {
   clear: both;
@@ -1446,8 +1446,8 @@ body.error404 .search-form {
   float: left;
   margin-right: 30px;
   border-radius: 50%;
-  -webkit-box-shadow: 7px 7px 0 #a00a74, -7px -7px 0 #1d215f;
-          box-shadow: 7px 7px 0 #a00a74, -7px -7px 0 #1d215f; }
+  -webkit-box-shadow: 7px 7px 0 #c2b59b, -7px -7px 0 #1d215f;
+          box-shadow: 7px 7px 0 #c2b59b, -7px -7px 0 #1d215f; }
 
 .tix_tickets_table .tix-column-description,
 .tix-ticket-form .tix-column-description {
